# lean-error-correction

./: .gitignore  README.md  guide.py  pyproject.toml  theorem_cache.json
data/: annotated_proofs.jsonl  correct_incorrect_pairs.jsonl  excluded_proofs.jsonl  explained_proofs.jsonl  sft_dataset.jsonl  src_fail.jsonl  src_pass.jsonl  theorem_pairs.jsonl  theorem_pairs_expanded.jsonl
large_workbook/: lean_workbook_plus_1001.lean  lean_workbook_plus_1002.lean  lean_workbook_plus_1003.lean  lean_workbook_plus_1007.lean  lean_workbook_plus_1011.lean  lean_workbook_plus_1017.lean  lean_workbook_plus_1018.lean  lean_workbook_plus_1020.lean  lean_workbook_plus_1021.lean  lean_workbook_plus_1031.lean  lean_workbook_plus_1048.lean  lean_workbook_plus_1058.lean  lean_workbook_plus_106.lean  lean_workbook_plus_1072.lean  lean_workbook_plus_1078.lean  lean_workbook_plus_1079.lean  lean_workbook_plus_1080.lean  lean_workbook_plus_1120.lean  lean_workbook_plus_1129.lean  lean_workbook_plus_1149.lean  lean_workbook_plus_1162.lean  lean_workbook_plus_1166.lean  lean_workbook_plus_1169.lean  lean_workbook_plus_117.lean  lean_workbook_plus_1184.lean  lean_workbook_plus_1188.lean  lean_workbook_plus_1190.lean  lean_workbook_plus_1200.lean  lean_workbook_plus_1215.lean  lean_workbook_plus_1216.lean  lean_workbook_plus_1237.lean  lean_workbook_plus_1244.lean  lean_workbook_plus_1247.lean  lean_workbook_plus_125.lean  lean_workbook_plus_1254.lean  lean_workbook_plus_1255.lean  lean_workbook_plus_1263.lean  lean_workbook_plus_1270.lean  lean_workbook_plus_128.lean  lean_workbook_plus_1297.lean  (+1283 more)
(+39 files in other folders)
